# Comp308Final

./: .gitignore  README.md
work/: CMakeLists.txt
work/ext/assimp-3.3.1/: Makefile
work/ext/assimp-3.3.1/code/: Makefile
work/ext/assimp-3.3.1/test/: Makefile
work/ext/assimp-3.3.1/test/gtest/src/gtest-build/: CTestTestfile.cmake  Makefile
work/ext/assimp-3.3.1/test/gtest/src/gtest-build/googlemock/: CTestTestfile.cmake  Makefile
work/ext/assimp-3.3.1/test/gtest/src/gtest-build/googlemock/gtest/: CTestTestfile.cmake  Makefile
work/ext/assimp-3.3.1/test/gtest/src/gtest-stamp/: gtest-build-.cmake  gtest-configure-.cmake  gtest-download-.cmake
work/ext/assimp-3.3.1/test/headercheck/: Makefile
work/ext/assimp-3.3.1/tools/assimp_cmd/: Makefile
work/res/: lightPlan.txt
work/res/shaders/: basic_shader.frag  basic_shader.vert  cylinder.frag  cylinder.vert  physShdr.frag  skyShdr.frag  skyShdr.vert
work/src/: CMakeLists.txt  agent.cpp  agent.hpp  branch.cpp  camera.hpp  geometry.cpp  geometry.hpp  leaf.cpp  main.cpp  mesh.cpp  mesh.hpp  opengl.hpp  parkobject.cpp  parkobject.hpp  quat.hh  shader_program.hpp  tree.cpp  world.cpp  world.hpp
work/src/gsim/: gs.cpp  gs.h  gs_array.cpp  gs_array.h  gs_deque.h  gs_geo2.cpp  gs_geo2.h  gs_heap.h  gs_input.cpp  gs_input.h  gs_manager.h  gs_output.cpp  gs_output.h  gs_polygon.cpp  gs_polygon.h  gs_set.cpp  gs_set.h  gs_shared.h  gs_string.cpp  gs_string.h  gs_trace.h  gs_tree.cpp  gs_tree.h  gs_vec2.cpp  gs_vec2.h  se_dcdt.cpp  se_dcdt.h  se_dcdt_elements.cpp  se_dcdt_elements.h  se_dcdt_manager.cpp  se_dcdt_manager.h  se_elements.cpp  se_elements.h  se_lct.cpp  se_lct.h  se_lct_funnel.cpp  se_lct_search.cpp  se_lct_tests.cpp  se_mesh.cpp  se_mesh.h  (+12 more)
